Check uninitialized PlanExecutor::ExecState in GetMoreCmd::generateBatch()

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.5.1
    • Affects Version/s: None
    • Component/s: Querying
    • None
    • Fully Compatible
    • ALL
    • Query 2016-12-12
    • 15
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      If PlanExecutor::getNext() throws in GetMoreCmd::generateBatch() due to exceeding the time limit when we have a tailable + awaitData cursor, then we can check the value of an uninitialized PlanExecutor::ExecState.

            Assignee:
            Tess Avitabile (Inactive)
            Reporter:
            Tess Avitabile (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: