SERVER-25721 Check uninitialized PlanExecutor::ExecState in GetMoreCmd::generateBatch()